--- a/scalegenerator.html
+++ b/scalegenerator.html
@@ -70,7 +70,9 @@
             line-height: 2;
             color: black;   
         }
-
+        #ControlPanel_UserIntervals {
+            width:200px;
+        }
     </style>
 </head>
 <body>
@@ -91,7 +93,8 @@
         <option value="A" >A </option>
         <option value="A#">A#</option>
         <option value="B" >B </option>
-    </select>Root Note<br><br>
+    </select>Root Note<br>
+    <input type="text" id="ControlPanel_UserIntervals"> Manual Intervals? </input><br><br>
     <button id="ControlPanel_Btn" onclick="main()">Generate Scale</button>
 </div>
 <br><hr><br><br>
@@ -213,7 +216,7 @@ function generateScaleIntervals(allowConsecutiveSemitones) {
 
 function nameNotCorrectly(pallet, nextIdx, lastNote) {
     var nextNote = pallet[nextIdx];
-    if(/* ControlPanel_SemiSemi.checked || */ lastNote.charAt(0) != nextNote.charAt(0)) {
+    if(lastNote.charAt(0) != nextNote.charAt(0)) {
         return nextNote;
     }
     debug("Avoiding bad note naming - lastNote ["+lastNote+"] would-be nextNote ["+nextNote+"]");
@@ -240,9 +243,6 @@ function intervalsToNotes(intervalArr, startingNote) {
         lastNoteAdded = noteToAdd;
     });
 
-    // if(!ControlPanel_Debug.checked) {
-        // notesToReturn.pop(); // drop the duplicate octave if not debugging
-    // }
     return notesToReturn;
 }
 
@@ -322,8 +322,8 @@ function main() {
     clearOutput();
     debug("=== START ===");
     
-    debug("=== Generating Intervals ===");
-    intervalArr = generateScaleIntervals(ControlPanel_SemiSemi.checked);
+    debug("=== Handling Intervals ===");
+    var intervalArr = ControlPanel_UserIntervals.value == "" ? generateScaleIntervals(ControlPanel_SemiSemi.checked) : ControlPanel_UserIntervals.value.split(",").map(v => parseFloat(v));
     intervalArr.forEach(interval => outputResult('interval', interval));
     outputResult(null);
     debug("Interval Sum   [" + safeSumList(intervalArr) + "]");
@@ -331,14 +331,14 @@ function main() {
     debug("=== Naming Notes ===");
     
     if(ControlPanel_SemiSemi.checked) {
-        warn("Note-naming when allowing consequitve semitones is tricky, so this might be off");
+        warn("Note-naming when allowing consequitve semitones can be tricky, so this might be off");
     }
-    notes = intervalsToNotes(intervalArr, ControlPanel_RootNote.value);
+    var notes = intervalsToNotes(intervalArr, ControlPanel_RootNote.value);
     notes.forEach(note => outputResult('note', note));
     outputResult(null);
 
     debug("=== Naming Scale ===");
-    scaleName = nameScale(ControlPanel_RootNote.value, intervalArr);
+    var scaleName = nameScale(ControlPanel_RootNote.value, intervalArr);
     outputResult('name', scaleName);
 
     // debug("=============");
