--- a/ScaleGenerator/index.html
+++ b/ScaleGenerator/index.html
@@ -95,7 +95,7 @@
         <option value="A#">A#</option>
         <option value="B" >B </option>
     </select>Root Note<br>
-    <input type="text" id="ControlPanel_UserIntervals"> Manual Intervals? </input><br><br>
+    <input type="text" id="ControlPanel_UserIntervals"> Manual Intervals? (CSV) </input><br><br>
     <button id="ControlPanel_Btn" onclick="main()">Generate Scale</button>
 </div>
 <br><hr><br><br>
