--- a/ScaleGenerator/index.html
+++ b/ScaleGenerator/index.html
@@ -44,7 +44,9 @@
             vertical-align: middle;
         }
         button {
-            font-size: 25px;
+            font-size: 20px;
+            padding: 10px;
+            font-family: consolas;
         }
         select {
             font-size: 20px; 
