Minor UI tweaks

--- a/ScaleGenerator/index.html
+++ b/ScaleGenerator/index.html
@@ -64,10 +64,12 @@
             margin-left: 5px;
         }
         .dropdown {
-            font-size: 20px; 
-            margin: 5px;  
+            font-size: 20px;
+            margin: 5px;
+            height: 38;
+            width: 60px;
+            margin-right: 15px;
         }
-        
         #ControlPanel_UserIntervals {
             width:200px;
         }
@@ -82,9 +84,9 @@
         }
         .checkbox {
             margin: 5px;
-            width: 25;
-            height: 27px;
-            font-size: 20px;
+            width: 35px;
+            height: 35px;
+            font-size: 30px;
             vertical-align: middle;
             margin-right: 13px;
         }
