Fixing playback octaves

--- a/ScaleGenerator/index.html
+++ b/ScaleGenerator/index.html
@@ -259,17 +259,22 @@ function nameNotCorrectly(pallet, nextIdx, lastNote) {
         return nextNote;
     }
     debug("Avoiding bad note naming - lastNote ["+lastNote+"] would-be nextNote ["+nextNote+"]");
-    var candidate = pallet[nextIdx + 1].charAt(0) + "b";
+    var candidate = pallet[nextIdx + 1];
+    candidate = candidate.charAt(0) + "b" + candidate.charAt(candidate.length-1);
     if(candidate != lastNote) {
         return candidate;
     }
     debug("New candidate ["+candidate+"] matches previous note ["+lastNote+"] - resulting to double flats");
-    return pallet[nextIdx + 2].charAt(0) + "bb";
+    var candidate = pallet[nextIdx + 2];
+    candidate = candidate.charAt(0) + "bb" + candidate.charAt(candidate.length-1);
+    return candidate; // BUG!! Preserve octave number
 }
 
 function intervalsToNotes(intervalArr, startingNote) {
-    const NOTES = ["C", "C#", "D", "D#", "E", "F", "F#", "G", "G#", "A", "A#", "B", /* looping */ "C", "C#", "D", "D#", "E", "F", "F#", "G", "G#", "A", "A#", "B", /* looping */ "C", "C#", "D", "D#", "E" ];
-    var notePalletToUse = NOTES.slice(NOTES.indexOf(startingNote), NOTES.length);
+    const NOTES = ["C4", "C#4", "D4", "D#4", "E4", "F4", "F#4", "G4", "G#4", "A4", "A#4", "B4", // looping 
+                   "C5", "C#5", "D5", "D#5", "E5", "F5", "F#5", "G5", "G#5", "A5", "A#5", "B5", // looping 
+                   "C6", "C#6", "D6", "D#6", "E6" ];
+    var notePalletToUse = NOTES.slice(NOTES.indexOf(startingNote + "4"), NOTES.length);
     var notesToReturn = [ notePalletToUse[0] ];
 
     var positionInPallet = 0;
@@ -348,11 +353,20 @@ function outputResult(type, value) {
     var elemToAppend = null;
     if(type == null) {
         elemToAppend = br();
-    } else {
+    } else if(typeof type === 'string') {
         elemToAppend = document.createElement(type);
         elemToAppend.innerText = prettifyInterval(value);
+    } else {
+        elemToAppend = type;
     }
     Results.appendChild(elemToAppend);
+}
+
+function createNote(noteName, noteValue) {
+    var toReturn = document.createElement('note');
+    toReturn.noteValue = noteValue;
+    toReturn.innerText = noteName;
+    return toReturn;
 }
 
 function main() {
@@ -372,30 +386,24 @@ function main() {
         warn("Note-naming when allowing consequitve semitones can be tricky, so this might be off");
     }
     var notes = intervalsToNotes(intervalArr, ControlPanel_RootNote.value);
-    notes.forEach(note => outputResult('note', note));
+    notes.forEach(note => outputResult(createNote(note.slice(0, note.length - 1), note)));
     outputResult(null);
 
     debug("=== Naming Scale ===");
     var scaleName = nameScale(ControlPanel_RootNote.value, intervalArr);
     outputResult('scale_name', scaleName);
 
-    // debug("=============");
-    // playNotes(notes);
-
     debug("=== FINISH ===");
 }
 
 function play() {
-    var allNotes = Array.from(document.getElementsByTagName('note')).map(elem => elem.innerText);
-    allNotes = allNotes.map(note => note + "4");
-    if(allNotes[0] == allNotes[allNotes.length-1]) {
-        allNotes[allNotes.length-1] = allNotes[allNotes.length-1].replace("4","5"); //last tone as octave
-    }
+    var allNotes = Array.from(document.getElementsByTagName('note')).map(elem => elem.noteValue);
     
     var synth = new Tone.Synth().toDestination();
     var now = Tone.now()    
     for(var i = 0; i< allNotes.length; ++i) {
         var note = allNotes[i];
+        debug("Playing ["+note+"]");
         synth.triggerAttackRelease(note, "8n", now + (0.5 * i));
     }
 }
