--- a/ScaleGenerator/index.html
+++ b/ScaleGenerator/index.html
@@ -81,6 +81,7 @@
             border: aliceblue;
             border-style: dashed;
             border-color: #848484;
+            border-width: 6px;
         }
         .table_cell {
             padding: 10px;
